--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,1 +1,407 @@
-/* Your SCSS here. */
+html {
+    scroll-behavior: smooth;
+}
+
+.body {
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Create a sticky/fixed navbar */
+#navbar {
+    overflow: hidden;
+    background-color: #f1f1f1;
+    padding: 60px 10px; /* Large padding which will shrink on scroll (using JS) */
+    padding-bottom: 10px !important ;
+    transition: 0.4s; /* Adds a transition effect when the padding is decreased */
+    position: fixed; /* Sticky/fixed navbar */
+    width: 100%;
+    top: 0; /* At the top */
+    z-index: 99;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: white;
+  }
+  
+  /* Style the navbar links */
+  #navbar a {
+    float: left;
+    color: black;
+    text-align: center;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  
+  /* Style the logo */
+  #navbar #logo {
+    font-size: 55px;
+    font-weight: bold;
+    transition: 0.4s;
+    text-align: left;
+    flex-grow: 1;
+  }
+
+
+  /* Links on mouse-over */
+  #navbar-right a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Style the active/current link */
+  #navbar a.active {
+    background-color: dodgerblue;
+    color: white;
+  }
+  
+  /* Display some links to the right */
+  #navbar-right {
+    margin-right: 20px;
+  }
+
+  .section {
+    height: 100vh;
+    position: relative;
+    width: 100%;
+    scroll-margin-top: 85px;
+    text-align: center;
+    background-color: white;
+  }
+
+  #about {
+    background-color: white;
+    padding-top: 120px;
+  }
+
+  #profile_pic {
+    max-height: 30vh;
+    border-radius: 50%;
+  }
+
+  // Background image
+  #resume {
+    background-image: url("../assets/bg_image3.png"); //Change background image 
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size:100vw;
+  }
+
+
+  //Footer CS
+  .footer {
+    display: flex;
+    flex-direction: row;
+    height: 50vh;
+    background-color: white;
+  }
+
+  .footer .vl {
+    border-left: 2px solid grey;
+    height: 60%;
+    margin-top: 5%;
+  }
+
+  #desc {
+    flex-grow: 10;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  #desc h4{
+    font-size: 20px;
+    margin-top: -3%;
+  }
+
+  #socials {
+    flex-grow: 8;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+  }
+
+  #socials #icons {
+    border-spacing: 50px;
+  }
+  //Footer CSS end
+
+//Carousel CSS
+/* Slideshow container */
+.slideshow-container {
+  max-width: 100vw;
+  position: relative;
+  margin: auto;
+  align-items: center;
+  object-fit: fill;
+  background-color: white;
+  height: 100vh;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+  max-height: 100vh;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -72px;
+  padding: 16px;
+  color: grey;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.prev {
+    left:0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: black;
+  font-size: 25px;
+  padding: 8px 12px;
+  position: relative;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+// Carousel CSS END
+
+//modals CSS
+
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    z-index: -1;
+  }
+
+#projects {
+    // background-clip: url("../assets/bg_video.mp4");
+    max-height: 100vh;
+    background: transparent;
+}
+
+.modal_buttons {
+    display: flex;
+    flex-direction: row;
+}
+
+.project_card {
+    margin: 2.5vw;
+    border:1px solid black;
+    border-radius: 20px;
+    padding: 0px 0px;
+    background-color: white;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+
+  .modal-content p {
+    text-align: center;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+//modals CSS end
+
+//Experience timeline
+
+.sec-ex {
+    height: 60vh;
+}
+
+#exp {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+  }
+
+.timeline {
+	width: 70vw;
+	height: 20px;
+	list-style: none;
+	text-align: justify;
+	margin: auto auto;
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,0)), color-stop(45%, rgba(255,255,255,0)), color-stop(51%, rgba(191,128,11,1)), color-stop(57%, rgba(255,255,255,0)), color-stop(100%, rgba(255,255,255,0)));
+	background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 45%, rgba(191,128,11,1) 51%, rgba(255,255,255,0) 57%, rgba(255,255,255,0) 100%);
+}
+
+.timeline:after {
+    display: inline-block;
+    content: "";
+    width: 100%;
+}
+
+.timeline li {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background: #F2BB13;
+	text-align: center;
+	line-height: 1.2;
+	position: relative;
+	border-radius: 50%;
+}
+.timeline li:before {
+	display: inline-block;
+	content: attr(data-year);
+	font-size: 20px;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.timeline li:nth-child(odd):before {
+	top: -40px;
+    width: 200px;
+}
+.timeline li:nth-child(even):before {
+	bottom: -40px;
+    width: 200px;
+}
+
+.timeline li:after {
+	display: inline-block;
+	content: attr(data-text);
+    font-style: bold;
+	font-size: 16px;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.timeline li:nth-child(odd):after {
+	bottom: 0;
+	margin-bottom: -10px;
+	transform: translate(-50%, 100%);
+    width: 150px;
+}
+.timeline li:nth-child(even):after {
+	top: 0;
+	margin-top: -10px;
+	transform: translate(-50%, -100%);
+    width: 150px;
+}
+  
+  /* Add responsiveness - on screens less than 580px wide, display the navbar vertically instead of horizontally */
+  @media screen and (max-width: 580px) {
+    #navbar {
+      padding: 20px 10px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
+      display: flex;
+      flex-direction: column;
+    }
+
+    #navbar #logo {
+        text-align: center;
+    }
+
+    #navbar a {
+      float: none;
+      display: block;
+      text-align: center;
+    }
+    #navbar-right {
+      float: none;
+    }
+  }
